  state to make full validation process again in College to be sent again in Council, finance
  advice does not follow
- When a Council item is 'returned', it is automatically sent back to College in 'validated'
  state to be immediatelly presentable in a next meeting, finance advice does follow
- When a Council item is presented, automatically add the COUNCILITEM_DECISIONEND_SENTENCE at
  the end of the item's decisionEnd if not already
- Make sure a MeetingGroup may not be removed if used in MeetingConfig.archivingRefs or
  MeetingCategory.groupsOfMatter
- Do only let ask advices (by item creator or internal reviewer) if some advices will be giveable in
  the state the item will be (itemcreated_waiting_advices or
  proposed_to_internal_reviewer_waiting_advices)
- When a College item was sent to Council (when it was frozen) and the final decision on the College item
  is "delayed", delete the item that was sent to the Council
- Do every manuallyLinkedItems of an item having finance advice accessible to the finance advisers
- Hide some elements for restricted power observers : some fileters, columns and access to element's history
- Added 'positive_with_remarks_finance' to the list of advice_type selectable by finance advisers,
  this behaves exactly like 'positive_finance' in every cases, except the icon that shows to the user
  that a comment has been added to the advice
- Power observers (not restricted) may access every decision annexes
- When an item is 'returned', keep original creator for duplicated items
- Do not rely on Products.MeetingCommunes for the testing part as we do not
  override every PM tests in MC, we just heritate from PM test file
- Get rid of ToolPloneMeeting.formatMeetingDate override that displayed a '*' for meetings where
  adoptsNextCouncilAgenda=True, we use imio.prettylink _leadingIcons now
- Moved finances specific advices to their own portal_type 'meetingadvicefinances'