@@ -612,8 +612,8 @@ class CustomMeetingItem(MeetingItem):
         '''
           Keep some new fields when item is cloned (to another mc or from itemtemplate).
         '''
-        res = ['labelForCouncil', 'privacyForCouncil',
-               'decisionSuite', 'decisionEnd', 'financeAdvice']
+        res = ['labelForCouncil', 'financeAdvice',
+               'decisionSuite', 'decisionEnd']
         if cloned_to_same_mc:
             res = res + ['archivingRef', 'textCheckList']
         return res
