@@ -266,7 +266,8 @@ collegeMeeting.usedItemAttributes = ['budgetInfos',
                                      'financeAdvice',
                                      'completeness',
                                      'labelForCouncil',
-                                     'privacyForCouncil',
+                                     'otherMeetingConfigsClonableToEmergency',
+                                     'otherMeetingConfigsClonableToPrivacy',
                                      'archivingRef',
                                      'motivation',
                                      'decisionSuite',
