@@ -259,7 +259,7 @@ collegeMeeting.usedItemAttributes = ['budgetInfos',
                                      'itemAssembly',
                                      'completeness',
                                      'labelForCouncil',
-                                     'privacyForCouncil',
+                                     'otherMeetingConfigsClonableToPrivacy',
                                      'archivingRef',
                                      'motivation',
                                      'textCheckList',
